2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/01_DeclNOinit.deca
// Description:
//    tests de programme correct, declaration de plusieurs sans initialisation.
//
// Resultats:
//    programme correct.
//
// Historique:
//    cree le 09/01/2024
{   
    int x,y,z;
    float a,b,c;
    boolean d,e;

}