2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/04_ListDeclVArSansDeclVarApresCom.deca
// Description:
//    tests de programme declaration de plusieurs variables sur la même ligne sans merre une variable après la dernière ","
//
// Resultats:
//    ligne 10 colone 14 : Erreur,  missing IDENT at ';'
//
// Historique:
//    cree le 09/01/2024
{
    int x, y, ;
}